--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,10 @@ html, body {
   max-width: 100%;
   text-align: center;
   text-decoration: initial;
+  color: #444;
+}
+.email:hover {
+  color: #5555DA;
 }
 @media (min-width: 425px) {
   .email {
@@ -69,6 +73,10 @@ html, body {
   width:  10vw;
   height: 10vw;
   background-size: cover;
+  opacity: 0.65;
+}
+.profile-link:hover {
+  opacity: 1;
 }
 
 @media (min-width: 425px) {
@@ -124,6 +132,12 @@ html, body {
   }
 }
 
+.yarnball-link {
+  opacity: 0.65;
+}
+.yarnball-link:hover {
+  opacity: 1;
+}
 .yarnball-link img {
   max-width: 100%;
 }
@@ -137,6 +151,10 @@ html, body {
   font-weight: bold;
   color: #444;
   font-size: 10vw;
+  opacity: 0.65;
+}
+.library-link:hover {
+  opacity: 1;
 }
 
 @media (min-width: 425px) {
@@ -164,6 +182,10 @@ html, body {
 .work-logo {
   flex-grow: 1;
   max-width: 80%;
+  opacity: 0.65;
+}
+.work-logo:hover {
+  opacity: 1;
 }
 .work-logo img {
   max-width: 80%;
