--- a/assets/style.css
+++ b/assets/style.css
@@ -37,11 +37,23 @@ a:visited {
 .profile-picture {
   display: block;
   width:  100px;
-  border-radius: 50px;
+  height: 100px;
+  background-color: #eff2f4;
   margin: 0 auto;
-  margin-top:    5px;
-  margin-bottom: 5px;
-  max-width: 100%;
+  border-radius: 15vw;
+  width:  30vw;
+  height: 30vw;
+  margin-top:    1vw;
+  margin-bottom: 1vw;
+}
+@media (min-width: 425px) {
+  .profile-picture {
+    border-radius: 50px;
+    width:  100px;
+    height: 100px;
+    margin-top:    5px;
+    margin-bottom: 5px;
+  }
 }
 
 .email {
@@ -135,8 +147,8 @@ a:visited {
 
 .boxed {
   background-color: #eff2f4;
-  margin-top:    1vw;
-  margin-bottom: 1vw;
+  margin-top:    3vw;
+  margin-bottom: 3vw;
   padding: 2vw;
   display: flex;
   flex-direction: row;
@@ -162,6 +174,48 @@ a.boxed:focus {
 
 .child-box {
   display: block;
+  padding-left:   5vw;
+  padding-right:  2.8vw;
+  padding-top:    0;
+  padding-bottom: 0.5vw;
+  font-size: 2.8vw;
+}
+@media (min-width: 425px) {
+  .child-box {
+    padding-left:   34px;
+    padding-right:  11px;
+    padding-bottom: 2px;
+    font-size: 12px;
+  }
+}
+.child-box-item {
+  display: flex;
+  align-items: center;
+  margin-top:    4vw;
+  margin-bottom: 4vw;
+}
+@media (min-width: 425px) {
+  .child-box-item {
+    margin-top:    18px;
+    margin-bottom: 18px;
+  }
+}
+.child-box-item-icon {
+  display: inline-block;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width:  4.5vw;
+  height: 4.5vw;
+  margin-right: 2.5vw;
+/*   margin-bottom: -0.5vw; */
+}
+@media (min-width: 425px) {
+  .child-box-item-icon {
+    width:  18px;
+    height: 18px;
+    margin-right: 9px;
+    margin-bottom: -4px;
+  }
 }
 
 .yarnball-link img {
@@ -225,49 +279,9 @@ a.aie-box:focus {
 }
 .aie-container .child-box {
   border-top: 1px solid #8C8C8C;
-  padding-left:   5vw;
-  padding-right:  2.8vw;
-  padding-top:    0;
-  padding-bottom: 0.5vw;
-  font-size: 2.8vw;
-}
-@media (min-width: 425px) {
-  .aie-container .child-box {
-    padding-left:   34px;
-    padding-right:  11px;
-    padding-bottom: 2px;
-    font-size: 12px;
-  }
-}
-.certificate {
-  display: flex;
-  align-items: center;
-  margin-top:    4vw;
-  margin-bottom: 4vw;
-}
-@media (min-width: 425px) {
-  .certificate {
-    margin-top:    18px;
-    margin-bottom: 18px;
-  }
 }
 .certificate-icon {
-  display: inline-block;
   background-image: url("certificate-icon.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  width:  4.5vw;
-  height: 4.5vw;
-  margin-right: 2.5vw;
-  margin-bottom: -0.5vw;
-}
-@media (min-width: 425px) {
-  .certificate-icon {
-    width:  18px;
-    height: 18px;
-    margin-right: 9px;
-    margin-bottom: -4px;
-  }
 }
 .certificate-year {
   margin-left: auto;
@@ -281,6 +295,7 @@ a.aie-box:focus {
 
 a.mediaware-box {
   background-color: #01539C;
+  margin-bottom: 0;
 }
 a.mediaware-box:hover,
 a.mediaware-box:focus {
@@ -305,4 +320,16 @@ a.mediaware-box .years {
   .years {
     font-size: 12px;
   }
+}
+
+.mediaware-container {
+  background-color: #01539C;
+  color: #fff;
+}
+.mediaware-container .child-box {
+  border-top: 1px solid #C1C1C1;
+}
+
+.product-icon {
+  background-image: url("product-icon.svg");
 }
