--- a/assets/style.css
+++ b/assets/style.css
@@ -1,67 +1,55 @@
 html, body {
   font-family: 'Roboto', sans-serif;
   color: #444;
-  font-size: 4.5vw;
+  font-size: 3.78vw;
+  margin: 0;
 }
-
-a {
-  text-decoration: initial;
-}
-a:visited {
-  color: initial;
-}
-
 @media (min-width: 425px) {
   html, body {
     font-size: 16px;
   }
 }
 
+a {
+  text-decoration: inherit;
+}
+a:visited {
+  color: inherit;
+}
+
+ul {
+  list-style-type: none;
+}
+
 .profile-card {
-  display: block;
   margin: 0 auto;
-  width: 400px;
-  max-width: 50%;
 }
 
 @media (min-width: 1024px) {
   .profile-card {
-    display: block;
+    display: inline-block;
     position: fixed;
     left: 50%;
-    width: 160px;
-    margin-left: -380px;
+    margin-left: -23.5rem;
   }
 }
 
 .profile-picture {
   display: block;
-  width:  100px;
-  height: 100px;
-  background-color: #eff2f4;
   margin: 0 auto;
-  border-radius: 15vw;
-  width:  30vw;
-  height: 30vw;
-  margin-top:    1vw;
-  margin-bottom: 1vw;
-}
-@media (min-width: 425px) {
-  .profile-picture {
-    border-radius: 50px;
-    width:  100px;
-    height: 100px;
-    margin-top:    5px;
-    margin-bottom: 5px;
-  }
+  width:  6.5rem;
+  height: 6.5rem;
+  border-radius: 3.25rem;
+  margin-top:    0.5rem;
+  margin-bottom: 0.5rem;
+  background-color: #eff2f4;
 }
 
 .email {
   display: block;
-  margin-top:    2vw;
-  margin-bottom: 2vw;
-  font-size: 4vw;
-  max-width: 100%;
+  margin-top:    0.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 0.75rem;
   text-align: center;
   color: #444;
 }
@@ -69,54 +57,29 @@ a:visited {
   color: #5555DA;
   outline: none;
 }
-@media (min-width: 425px) {
-  .email {
-    margin-top:    5px;
-    margin-bottom: 5px;
-    font-size: 12px;
-  }
-}
 
 .profile-links {
   display: flex;
-  width: 400px;
-  max-width: 100%;
-  margin: 0 auto;
-  margin-top:    5px;
-  margin-bottom: 5px;
+  margin-top:    0.5rem;
+  margin-bottom: 0.5rem;
   justify-content: center;
 }
 
 .profile-link {
   display: inline-block;
-  width:  10vw;
-  height: 10vw;
+  width:  1.8rem;
+  height: 1.8rem;
+  margin-left:  0.25rem;
+  margin-right: 0.25rem;
+  padding-bottom: 0.25rem;
   background-size: contain;
   background-repeat: no-repeat;
-  padding-bottom: 1.5vw;
-  vertical-align: top;
-  margin-left:  0.5vw;
-  margin-right: 0.5vw;
 }
 .profile-link:hover,
 .profile-link:focus {
-  border-bottom: 1.5vw solid orange;
+  border-bottom: 0.25rem solid #FFA500;
   padding-bottom: 0;
   outline: none;
-}
-
-@media (min-width: 425px) {
-  .profile-link:hover,
-  .profile-link:focus {
-    border-bottom: 4px solid orange;
-  }
-  .profile-link {
-    width:  30px;
-    height: 30px;
-    padding-bottom: 4px;
-    margin-left:  2px;
-    margin-right: 2px;
-  }
 }
 
 .github-link {
@@ -130,206 +93,159 @@ a:visited {
 }
 
 .main-content {
-  display: block;
   margin: 0 auto;
-  width: 400px;
+  width: 25rem;
   max-width: 100%;
 }
 
-.boxed-heading {
-  margin-top: 10vw;
-}
-@media (min-width: 425px) {
-  .boxed-heading {
-    margin-top: 35px;
-  }
+h2 {
+  margin-top: 2rem;
+  font-size:   inherit;
+  font-weight: inherit;
 }
 
 .boxed {
+  display: block;
+  margin-top:    0.7rem;
+  margin-bottom: 0.7rem;
   background-color: #eff2f4;
-  margin-top:    3vw;
-  margin-bottom: 3vw;
-  padding: 2vw;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items:     center;
-  flex-wrap: wrap;
+/*   padding: 0.5rem; */
 }
 a.boxed:hover,
 a.boxed:focus {
   background-color: #D8E3EA;
-  border-left: 5px solid orange;
-  margin-left: -5px;
+  border-left: 0.3rem solid #FFA500;
+  margin-left: -0.3rem;
   outline: none;
 }
 
-@media (min-width: 425px) {
-  .boxed {
-    margin-top:    15px;
-    margin-bottom: 15px;
-    padding: 10px;
-  }
+.yarnball-link {
+  padding: 0.5rem;
 }
-
-.child-box {
-  display: block;
-  padding-left:   5vw;
-  padding-right:  2.8vw;
-  padding-top:    0;
-  padding-bottom: 0.5vw;
-  font-size: 2.8vw;
-}
-@media (min-width: 425px) {
-  .child-box {
-    padding-left:   34px;
-    padding-right:  11px;
-    padding-bottom: 2px;
-    font-size: 12px;
-  }
-}
-.child-box-item {
-  display: flex;
-  align-items: center;
-  margin-top:    4vw;
-  margin-bottom: 4vw;
-}
-@media (min-width: 425px) {
-  .child-box-item {
-    margin-top:    18px;
-    margin-bottom: 18px;
-  }
-}
-.child-box-item-icon {
-  display: inline-block;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width:  4.5vw;
-  height: 4.5vw;
-  margin-right: 2.5vw;
-/*   margin-bottom: -0.5vw; */
-}
-@media (min-width: 425px) {
-  .child-box-item-icon {
-    width:  18px;
-    height: 18px;
-    margin-right: 9px;
-    margin-bottom: -4px;
-  }
-}
-
 .yarnball-link img {
-  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+  height: 6rem;
 }
+
+.logo-gallery {
+  display: flex;
+  padding: 0.5rem;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 
 .library-link {
-  padding: 2vw;
-  padding-left:  3vw;
-  padding-right: 3vw;
+  padding: 0.4rem;
+  padding-left:  0.6rem;
+  padding-right: 0.6rem;
   max-width: 100%;
   font-weight: bold;
   color: #444;
-  font-size: 10vw;
+  font-size: 1.5rem;
 }
 .library-link:hover,
 .library-link:focus {
   background-color: #D8E3EA;
   outline: none;
-  border-left: 5px solid orange;
+  border-left: 5px solid #FFA500;
   margin-left: -5px;
 }
 
-@media (min-width: 425px) {
-  .library-link {
-    padding: 5px;
-    padding-left:  10px;
-    padding-right: 10px;
-    font-size: 20px;
-  }
-}
-
 .library-link img {
-  max-width: 100%;
-  width: 24vw;
-}
-@media (min-width: 425px) {
-  .library-link img {
-    max-width: 100px;
-  }
+  width:  6rem;
+  height: 2rem;
+  vertical-align: middle;
 }
 
-.work-box {
-  flex-wrap: nowrap;
-  justify-content: space-between;
+
+.box-header {
+  display: flex;
+  padding: 0.5rem;
+  align-items: center;
+}
+a.box-header:hover,
+a.box-header:focus {
+  background-color: #D8E3EA;
+  border-left: 0.3rem solid #FFA500;
+  margin-left: -0.3rem;
+  outline: none;
+}
+.box-header img {
+  max-width: 17rem;
+  height:   2.5rem;
+}
+.box-header .attribute {
+  margin-left: auto;
+  font-size: 0.8rem;
+  white-space: nowrap;
+}
+.box-content {
+  display: block;
+  margin-top: 0;
+  padding: 0.5rem;
+  border-top: 1px solid #CECECE;
+}
+.box-content .attribute {
+  margin-left: auto;
+  font-size: 0.8rem;
+}
+ul.box-content {
+  padding-left: 1rem;
+}
+.box-content li {
+  display: flex;
+  font-size: 0.8rem;
+  margin-top:    0.5rem;
+  margin-bottom: 0.5rem;
+}
+.box-content li .attribute {
+  margin-left: auto;
+}
+.list-item-icon {
+  display: inline-block;
+  width:  1rem;
+  height: 1rem;
+  background-size: contain;
+  margin-right: 0.5rem;
 }
 
 /* AIE */
-.aie-container {
+.aie-box {
   background-color: #0a2a3b;
   color: #fff;
 }
-a.aie-box {
-  background: transparent;
-  margin-bottom: 0;
-  color: #fff;
-}
-a.aie-box:hover,
-a.aie-box:focus {
+.aie-box a:hover,
+.aie-box a:focus {
   background-color: #17435A;
 }
-.aie-container .child-box {
+.aie-box .box-content {
   border-top: 1px solid #8C8C8C;
 }
 .certificate-icon {
   background-image: url("certificate-icon.svg");
 }
-.certificate-year {
-  margin-left: auto;
-  font-size: 2.8vw;
-}
-@media (min-width: 425px) {
-  .certificate-year {
-    font-size: 11px;
-  }
-}
 
-a.mediaware-box {
+/* Mediaware */
+.mediaware-box {
   background-color: #01539C;
-  margin-bottom: 0;
+  color: #fff;
 }
-a.mediaware-box:hover,
-a.mediaware-box:focus {
+.mediaware-box a:hover,
+.mediaware-box a:focus {
   background-color: #0E66B5;
 }
-a.mediaware-box .years {
-  color: #fff;
-}
-
-.work-logo {
-  max-width: 80%;
-}
-.work-logo img {
-  max-width: 80%;
-}
-
-.years {
-  font-size: 4vw;
-  white-space: nowrap;
-}
-@media (min-width: 425px) {
-  .years {
-    font-size: 12px;
-  }
-}
-
-.mediaware-container {
-  background-color: #01539C;
-  color: #fff;
-}
-.mediaware-container .child-box {
+.mediaware-box .box-content {
   border-top: 1px solid #C1C1C1;
 }
-
 .product-icon {
   background-image: url("product-icon.svg");
+}
+
+/* NCH */
+.application-icon {
+  background-image: url("application-icon.svg");
 }
