--- a/assets/style.css
+++ b/assets/style.css
@@ -210,6 +210,7 @@ ul.box-content {
   width:  1rem;
   height: 1rem;
   background-size: contain;
+  background-repeat: no-repeat;
   margin-right: 0.5rem;
 }
 
